--- a/AUTHORS
+++ b/AUTHORS
@@ -1,1 +1,6 @@
-FIXME: list authors' names and email addresses.
+Ines Boehm
+Andrew Millar
+Andrés Romanowski
+Benjamin Thomas
+Edward Wallace
+Tomasz Zielinski
